--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -6,12 +6,12 @@
 # 
 # <https://github.com/KFERMercer/OpenWrt-CI>
 # 
-#
+
 name: OpenWrt-CI
 
-#on:
-#  schedule:
-#    - cron: 0 20 * * *
+on:
+  schedule:
+    - cron: 0 20 * * *
 
 jobs:
 
